# maze-solver

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: SDLHandler.h  image.h  maze_solver.h  point.h  sdl_handler.h
include/exceptions/: opencv_exception.h  sdl_exception.h
src/: SDLHandler.cpp  image.cpp  main.cpp  maze_solver.cpp  point.cpp  sdl_handler.cpp
src/exceptions/: opencv_exception.cpp  sdl_exception.cpp
